//
//  BallComponent.swift
//  DumbDuels
//
//  Created by Wen Jun Lye on 11/4/23.
//

import DuelKit

class BallComponent: Component {
    var id: ComponentID

    init() {
        self.id = ComponentID()
    }
}
