//
//  SOAssets.swift
//  DumbDuels
//
//  Created by Wen Jun Lye on 11/4/23.
//

struct SOAssets {
    static let background = "field"

    static let players = ["soccer-player-0", "soccer-player-1"]

    static let playersGoal = ["soccer-player-flash-0", "soccer-player-flash-1"]

    static let ball = "ball"

    static let goal = "goal"

    static let particles = ["field-particle"]
}
